crates/shipper-types/src/snapshots/shipper_types__tests__snapshots__release_plan_snapshot.snap
---
source: crates/shipper-types/src/lib.rs
assertion_line: 1535
expression: plan
---
plan_version: shipper.plan.v1
plan_id: abc123
created_at: "2025-01-15T12:00:00Z"
registry:
  name: crates-io
  api_base: "https://crates.io"
  index_base: "https://index.crates.io"
packages:
  - name: core-lib
    version: 0.1.0
    manifest_path: crates/core-lib/Cargo.toml
  - name: my-cli
    version: 0.2.0
    manifest_path: crates/my-cli/Cargo.toml
dependencies:
  my-cli:
    - core-lib
